--- a/HotOffTheNumberPad/mobile/src/main/res/menu/menu_recent_contacts.xml
+++ b/HotOffTheNumberPad/mobile/src/main/res/menu/menu_recent_contacts.xml
@@ -1,5 +1,11 @@
-<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools" tools:context=".RecentContactsActivity">
-    <item android:id="@+id/action_settings" android:title="@string/action_settings" android:orderInCategory="100"
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".RecentContactsActivity">
+    <item
+        android:id="@+id/action_open_contacts"
+        android:title="@string/open_contacts"
+        android:icon="@drawable/add_new_contact"
+        android:orderInCategory="100"
         app:showAsAction="never" />
 </menu>
