--- a/HotOffTheNumberPad/mobile/src/main/res/values/dimens.xml
+++ b/HotOffTheNumberPad/mobile/src/main/res/values/dimens.xml
@@ -1,5 +1,6 @@
 <resources>
     <!-- Default screen margins, per the Android Design guidelines. -->
-    <dimen name="activity_horizontal_margin">16dp</dimen>
-    <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="doublespacing">16dp</dimen>
+    <dimen name="spacing">8dp</dimen>
+    <dimen name="profile_photo_size">56dp</dimen>
 </resources>
