--- a/mobile/src/main/res/menu/menu_recent_contacts.xml
+++ b/mobile/src/main/res/menu/menu_recent_contacts.xml
@@ -6,6 +6,5 @@
         android:id="@+id/action_open_contacts"
         android:title="@string/open_contacts"
         android:icon="@drawable/add_new_contact"
-        android:orderInCategory="100"
-        app:showAsAction="never" />
+        app:showAsAction="always" />
 </menu>
