--- a/mobile/src/main/res/layout/fragment_recent_contacts.xml
+++ b/mobile/src/main/res/layout/fragment_recent_contacts.xml
@@ -9,7 +9,8 @@
         android:id="@+id/recycler_view"
         android:scrollbars="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:background="@color/white"/>
 
     <ImageButton
         android:id="@+id/add_button"
@@ -18,8 +19,6 @@
         android:layout_gravity="end|bottom"
         android:layout_marginBottom="@dimen/add_button_margin"
         android:layout_marginEnd="@dimen/add_button_margin"
-        android:tint="@android:color/holo_green_light"
-        android:elevation="@dimen/elevation_high"
         android:background="@drawable/oval_ripple"
         android:src="@android:drawable/ic_input_add"/>
 
