--- a/mobile/src/main/res/layout/list_item.xml
+++ b/mobile/src/main/res/layout/list_item.xml
@@ -24,7 +24,7 @@
         android:layout_height="wrap_content"
         android:padding="16dp"
         android:layout_gravity="center_vertical"
-        android:textColor="@color/material_deep_teal_500"
+        android:textColor="@color/primary_text"
         android:textSize="18sp"
         tools:text="Scott Bishop" />
 </LinearLayout>
