--- a/mobile/src/main/res/layout/fragment_recent_contacts.xml
+++ b/mobile/src/main/res/layout/fragment_recent_contacts.xml
@@ -1,25 +1,33 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".RecentContactsActivity$RecentContactsFragment">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:tools="http://schemas.android.com/tools"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                tools:context=".RecentContactsActivity$RecentContactsFragment">
 
-    <!-- A RecyclerView with some commonly used attributes -->
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recycler_view"
-        android:scrollbars="vertical"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/white"/>
+        android:orientation="vertical" >
 
-    <ImageButton
-        android:id="@+id/add_button"
-        android:layout_width="@dimen/diameter"
-        android:layout_height="@dimen/diameter"
-        android:layout_gravity="end|bottom"
-        android:layout_marginBottom="@dimen/add_button_margin"
-        android:layout_marginEnd="@dimen/add_button_margin"
-        android:background="@drawable/oval_ripple"
-        android:src="@android:drawable/ic_input_add"/>
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/activity_dialer_toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="?android:colorPrimary"
+            android:minHeight="?attr/actionBarSize"/>
 
-</FrameLayout>
+        <!-- A RecyclerView with some commonly used attributes -->
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recycler_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/white"
+            android:scrollbars="vertical"/>
+
+    </LinearLayout>
+
+    <include
+        android:id="@+id/view_fab_button"
+        layout="@layout/view_fab_button"/>
+
+</RelativeLayout>
