--- a/mobile/src/main/res/values/styles.xml
+++ b/mobile/src/main/res/values/styles.xml
@@ -1,11 +1,8 @@
 <resources>
     <!-- inherit from the material theme -->
 
-    <style name="AppTheme" parent="AppTheme.Base" />
-
-    <style name="AppTheme.Base" parent="Theme.AppCompat.Light">
-        <item name="android:displayOptions">showHome|homeAsUp|showTitle</item>
-        <item name="displayOptions">showHome|homeAsUp|showTitle</item>
-        <item name="android:icon">@android:color/transparent</item>
+    <!-- Base application theme. -->
+    <style name="AppTheme" parent="android:Theme.Holo.Light.DarkActionBar">
+        <!-- Customize your theme here. -->
     </style>
 </resources>
