--- a/mobile/src/main/res/layout/list_item.xml
+++ b/mobile/src/main/res/layout/list_item.xml
@@ -1,30 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="horizontal"
-    android:layout_width="match_parent"
-    android:padding="16dp"
-    android:background="@drawable/list_view_selector"
-    android:layout_height="wrap_content">
+              xmlns:tools="http://schemas.android.com/tools"
+              xmlns:app="http://schemas.android.com/apk/res-auto"
+              android:orientation="horizontal"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:padding="@dimen/double_spacing"
+              android:background="@drawable/list_view_selector" >
 
     <com.scottbishop.HotOffTheDialer.commons.CircularImageView
         android:id="@+id/image"
-        android:layout_width="56dp"
-        android:layout_height="56dp"
+        android:layout_width="@dimen/photo_size"
+        android:layout_height="@dimen/photo_size"
         android:layout_gravity="center_vertical"
         app:border_color="#EEEEEE"
-        app:border_width="2dp"
+        app:border_width="@dimen/quarter_spacing"
         app:shadow="true"
-        tools:src="@drawable/common_signin_btn_icon_dark" />
+        tools:src="@drawable/common_signin_btn_icon_dark"/>
 
     <TextView
         android:id="@+id/name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="16dp"
+        android:padding="@dimen/double_spacing"
         android:layout_gravity="center_vertical"
         android:textColor="@color/primary_text"
         android:textSize="18sp"
-        tools:text="Scott Bishop" />
+        tools:text="Scott Bishop"/>
 </LinearLayout>
