--- a/mobile/src/main/res/menu/menu_recent_contacts.xml
+++ b/mobile/src/main/res/menu/menu_recent_contacts.xml
@@ -1,10 +1,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".RecentContactsActivity">
+      xmlns:app="http://schemas.android.com/apk/res-auto"
+      xmlns:tools="http://schemas.android.com/tools"
+      tools:context=".RecentContactsActivity">
     <item
         android:id="@+id/action_open_contacts"
         android:title="@string/open_contacts"
-        android:icon="@drawable/add_new_contact"
-        app:showAsAction="always" />
+        android:icon="@drawable/contacts"
+        app:showAsAction="always"/>
 </menu>
