--- a/mobile/src/main/res/values-v21/styles.xml
+++ b/mobile/src/main/res/values-v21/styles.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
 
         <!-- android theme colors -->
         <item name="android:colorPrimary">@color/theme_dialer_primary</item>
         <item name="android:colorPrimaryDark">@color/theme_dialer_high</item>
-        <item name="android:colorAccent">@color/theme_dialer_accent</item>
+        <item name="android:colorAccent">@color/primary_light</item>
         <item name="android:navigationBarColor">@color/theme_dialer_primary</item>
 
         <!-- android transitions -->
@@ -14,8 +15,8 @@
         <item name="android:windowAllowReturnTransitionOverlap">true</item>
         <item name="drawerArrowStyle">@style/DrawerArrowStyle</item>
     </style>
-    
-    
+
+
     <style name="TransitionSampleActivity" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="android:colorPrimaryDark">@color/color_set_1_primary</item>
         <item name="android:colorPrimary">@color/color_set_1_primary</item>
