--- a/mobile/src/main/res/values/dimens.xml
+++ b/mobile/src/main/res/values/dimens.xml
@@ -2,6 +2,7 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="doublespacing">16dp</dimen>
     <dimen name="spacing">8dp</dimen>
+    <dimen name="half_spacing">4dp</dimen>
     <dimen name="profile_photo_size">56dp</dimen>
     <dimen name="diameter">48dp</dimen>
     <dimen name="elevation_low">1dp</dimen>
@@ -13,4 +14,7 @@
     <dimen name="button_elevation">2dp</dimen>
     <dimen name="button_press_elevation">4dp</dimen>
     <dimen name="navigation_drawer_width">240dp</dimen>
+    <dimen name="double_spacing">16dp</dimen>
+    <dimen name="photo_size">56dp</dimen>
+    <dimen name="quarter_spacing">2dp</dimen>
 </resources>
